new expression regular
type text and new expression regular

--- a/register.html
+++ b/register.html
@@ -18,7 +18,7 @@
     </div>
     <div id="email_div">
       <label>Email</label> <br>
-      <input type="email" name="email" class="textInput">
+      <input type="text" name="email" class="textInput">
       <div id="email_error"></div>
     </div>
     <div id="password_div">
